<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kiwix</string>
    <string name="menu_openfile">Open File</string>
    <string name="menu_help">Help</string>
    <string name="menu_home">Home</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search article</string>
    <string name="menu_searchintext">Find in page</string>
    <string name="menu_randomarticle">Random article</string>
    <string name="search_label">Search</string>
    <string name="articlesearch_hint">Type to lookup articles</string>
    <string name="choose_file">Select a ZIM Content File (*.zim)</string>
    <string name="error_nozimfilesfound">No ZIM files found on your device.\nTake a look at the Help Page to get directions on how to load content into Kiwix.\nIf you did put a ZIM file on your device/external storage, you might retry in a minute or restart your device.</string>
    <string name="error_filenotfound">Error: The selected ZIM file could not be found.</string>
    <string name="error_fileinvalid">Error: The selected file is not a valid ZIM file.</string>
    <string name="error_articlenotfound">Error: Loading article \"%1$s\" failed.</string>
    <string name="error_articleurlnotfound">Error: Loading article (Url: %1$s) failed.</string>
    <string name="pref_display_title">Display</string>
    <string name="pref_zoom_title">Zoom</string>
    <string name="pref_zoom_dialogtitle">Zoom</string>    
    <string-array
        name="pref_zoom_entries">
        <item>Automatic</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="pref_content_title">Content</string>
    <string name="pref_initpage_title">When Kiwix starts</string>
    <string name="pref_initpage_dialogtitle">When Kiwix starts</string>    
    <string-array
        name="pref_initpage_entries">
        <item>Show main article</item>
        <item>Show last visited article</item>
        <item>Show random article</item>
        <item>Show welcome page</item>
    </string-array>
    
</resources>
