<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:key="pref_display"
        android:title="@string/pref_display_title">
        
        
        <ListPreference
        	android:key="pref_zoom"
        	android:title="@string/pref_zoom_title"
        	android:dialogTitle="@string/pref_zoom_dialogtitle"
        	android:entries="@array/pref_zoom_entries"
        	android:entryValues="@array/pref_zoom_entryvalues"
        	android:defaultValue="automatic" />
        
    </PreferenceCategory>
    <PreferenceCategory 
        android:key="pref_content"
        android:title="@string/pref_content_title">
        <ListPreference
        	android:key="pref_initpage"
        	android:title="@string/pref_initpage_title"
        	android:dialogTitle="@string/pref_initpage_dialogtitle"
        	android:entries="@array/pref_initpage_entries"
        	android:entryValues="@array/pref_initpage_entryvalues"
        	android:defaultValue="main" />        
    </PreferenceCategory>
    
    <!-- PreferenceCategory 
           android:title="INFO"
           android:key="pref_key_info">
        
        
    </PreferenceCategory>-->
       
</PreferenceScreen>